[package]
name = "tgconnector"
version = "0.1.0"
authors = ["Sreyas-Sreelal"]
edition = "2018"

[lib]
name = "tgconnector"
crate-type = ["cdylib"]

[dependencies]
samp-sdk = {git = "https://github.com/ZOTTCE/samp-sdk"}
minihttp = {git = "https://github.com/Sreyas-Sreelal/minihttp"}
serde_json = "1.0"
serde = "*"
serde_derive = "*"
encoding = "*"