[package]
name = "tgconnector"
version = "0.2.0"
authors = ["Sreyas-Sreelal"]
edition = "2018"

[lib]
name = "tgconnector"
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"

[dependencies]
samp = {git="https://github.com/ZOTTCE/samp-rs/",branch="async-amx",features = ["async"]}
log = "0.4.6"
fern = "0.5.7"
threadpool = "1.7.1"
minihttp = {git = "https://github.com/Sreyas-Sreelal/minihttp"}
serde_json = "1.0.38"
serde = "1.0.86"
serde_derive = "1.0.86"
encoding = "0.2.33"